# Qt-text-editor

./: CMakeLists.txt  Qt-text-editor.pro  README.md  codeeditor.cpp  codeeditor.h  highlighter.cpp  highlighter.h  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
examples/: django.py  main.cpp  scala.scala
highlights/: languages.xml
